argocd/manifests/lazydj/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lazydj
  labels:
    app.kubernetes.io/name: lazydj
    app.kubernetes.io/managed-by: argocd
