argocd/manifests/lazydj/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lazydj
  namespace: lazydj
  labels:
    app: lazydj
    app.kubernetes.io/name: lazydj
spec:
  replicas: 0
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: lazydj
  template:
    metadata:
      labels:
        app: lazydj
        app.kubernetes.io/name: lazydj
    spec:
      containers:
        - name: lazydj
          image: jlevangie/lazydj:v2.0.17
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 5000
              protocol: TCP
          resources:
            requests:
              cpu: 25m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 256Mi
          readinessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 30
            periodSeconds: 20
            timeoutSeconds: 5
